force-app/main/default/objects/CSV_Column_Mapping__mdt/CSV_Column_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Store default mappings for CSV to List Upload Staging</description>
    <label>CSV Column Mapping</label>
    <pluralLabel>CSV Column Mapping</pluralLabel>
</CustomObject>