force-app/main/default/objects/CSV_Column_Mapping__mdt/fields/Column_Heading__c.field-meta.xml
<CustomField>
    <fullName>Column_Heading__c</fullName>
    <description>CSV Column Heading</description>
    <inlineHelpText>CSV Column Heading</inlineHelpText>
    <label>Column Heading</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>