force-app/main/default/objects/CSV_Column_Mapping__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>Target Field for the CSV to load data into</description>
    <inlineHelpText>Target Field for the CSV to load data into</inlineHelpText>
    <label>Target Field</label>
    <metadataRelationshipControllingField>CSV_Column_Mapping__mdt.Target_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>CSV_Column_Mapping</relationshipLabel>
    <relationshipName>CSV_Column_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>