force-app/main/default/objects/CSV_Column_Mapping__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>Target Object for the Field to load data into</description>
    <inlineHelpText>Target Object for the Field to load data into</inlineHelpText>
    <label>Target Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>CSV_Column_Mapping</relationshipLabel>
    <relationshipName>CSV_Column_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>